<resources>
    <string name="app_name">PasswordKeeper</string>
    <string name="action_settings">Settings</string>
    <string name="titleName">Title</string>
    <string name="DateName">Date</string>
    <string name="SaveName">保存</string>
    <string name="takePictureName">拍照</string>
    <string name="CancelName">取消</string>
    <string name="DeleteName">删除</string>
    <string name="AddText">添加</string>
    <string name="GetALLText">显示所有</string>
    <string name="BtnLogin">登录</string>
    <string name="title_activity_login">Sign in</string>
    <string name="about_link"><a href='http://example.com'>忘记密码？</a></string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
