<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/outsideLayout"
    tools:context="com.example.huanghailiang.passwordkeeper.EditNotes">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/titleName"
            android:id="@+id/textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/DateName"
            android:id="@+id/textView2"
            android:layout_below="@+id/textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="29dp" />



        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/editNoteTitle"
            android:layout_marginTop="1dp"
            android:layout_alignParentTop="true"
            android:layout_alignEnd="@+id/textView"
            android:layout_alignRight="@+id/textView"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/NoteDate"
            android:layout_below="@+id/editNoteTitle"
            android:layout_alignEnd="@+id/textView2"
            android:layout_alignRight="@+id/textView2"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"
            android:layout_marginBottom="@dimen/activity_vertical_margin"
       />
    <LinearLayout
        android:id="@+id/MainArea"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_above="@+id/DoButtons"
        android:layout_below="@+id/NoteDate"
        >
        <com.example.huanghailiang.passwordkeeper.RichTextEditor
            android:id="@+id/richEditor"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#fff"
            />
        <LinearLayout
            android:id="@+id/EditBar"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:background="#666"
            android:orientation="horizontal"

            >
            <View
                android:id="@+id/button1"
                android:layout_width="30dp"
                android:layout_height="28dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/image1"
                android:gravity="center_horizontal" />

            <View
                android:id="@+id/button2"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginLeft="14dp"
                android:background="@drawable/image2"
                android:gravity="center_horizontal" />


        </LinearLayout>
        <!-- 富文本编辑器 -->

    </LinearLayout>





<!--    <com.onegravity.rteditor.RTEditText
        android:id="@+id/rtEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:imeOptions="actionDone|flagNoEnterAction"
        android:inputType="textMultiLine|textAutoCorrect|textCapSentences"
        android:layout_below="@+id/NoteContent"/>-->
          <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:id="@+id/DoButtons"
            android:gravity="bottom|end"
           >
            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SaveName" />

            <Button
                android:id="@+id/btnDelete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/DeleteName" />
            <Button
                android:id="@+id/btnClose"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/CancelName" />
        </LinearLayout>
</RelativeLayout>
